--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "prettier": "npx prettier --write ./pages/*.vue ./components/*.vue"
   },
   "dependencies": {
+    "@nuxt/image": "^1.8.0",
+    "@pinia/nuxt": "^0.5.4",
     "animejs": "^3.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "nodemailer": "^6.9.15",
     "nuxt": "^3.13.0",
+    "pinia": "^2.2.2",
     "uuid": "^10.0.0",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@types/animejs": "^3.1.12",
     "nodemon": "^3.1.5",
     "tailwindcss": "^3.4.12"
   }
