--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "server": "node ./backend/server.cjs",
-    "live": "nodemon ./backend/server.cjs",
     "tailwind": "npx tailwindcss -i ./assets/styles/input.css -o ./assets/styles/style.css --watch",
     "prettier": "npx prettier --write ./pages/*.vue ./components/*.vue"
   },
@@ -30,6 +28,8 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@types/animejs": "^3.1.12",
+    "@types/cors": "^2.8.17",
+    "@types/nodemailer": "^6.4.16",
     "nodemon": "^3.1.5",
     "tailwindcss": "^3.4.12"
   }
