--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxt/image": "^1.8.0",
     "@pinia/nuxt": "^0.5.4",
+    "@stripe/stripe-js": "^4.6.0",
     "animejs": "^3.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
