--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "animejs": "^3.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "howler": "^2.2.4",
     "nodemailer": "^6.9.15",
     "nuxt": "^3.13.0",
     "pinia": "^2.2.2",
@@ -30,6 +31,7 @@
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@types/animejs": "^3.1.12",
     "@types/cors": "^2.8.17",
+    "@types/howler": "^2.2.12",
     "@types/nodemailer": "^6.4.16",
     "nodemon": "^3.1.5",
     "tailwindcss": "^3.4.13"
