--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.9.15",
     "nuxt": "^3.13.2",
     "pinia": "^2.2.2",
+    "pinia-plugin-persistedstate": "^4.1.1",
     "stripe": "^17.0.0",
     "uuid": "^10.0.0",
     "vue": "latest",
