--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/cors": "^2.8.17",
     "@types/howler": "^2.2.12",
     "@types/nodemailer": "^6.4.16",
+    "daisyui": "^4.12.13",
     "tailwindcss": "^3.4.13"
   }
 }
